--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         function searchExams() {
             const input = document.getElementById('searchBox');
 
-            fetch(`https://stats2.aamin.dev/search?query=${encodeURIComponent(input.value)}`)
+            fetch(`https://statsv2.aamin.dev/search?query=${encodeURIComponent(input.value)}`)
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById("html-output").innerHTML = '';
