--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                 })
                 .catch(error => console.error('Error:', error));
         }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            searchExams();
+        });
     </script>
 </body>
 </html>
