Minor beauty fixes

--- a/upload/index.html
+++ b/upload/index.html
@@ -101,7 +101,7 @@
                     success: function(data) {
                         $('#loading-animation').hide(); // Hide the loading animation
                         // Render the HTML in the pre tag with id 'html-output'
-                        $('#html-output').html(data).show();
+                        $('#html-output').text(data).show();
                     },
                     error: function() {
                         $('#loading-animation').hide(); // Hide the loading animation
@@ -151,7 +151,8 @@
 </head>
 <body>
 <div class="container">
-    <h1 style="color: #fff;">Upload Statistics</h1>
+    <h1 style="color: #fff;">Upload Statistics (BETA VERSION)</h1>
+    <h3>Currently only does screenshot analysis and does not send any data</h3>
     <div class="upload-area">
         <div class="upload-instructions">Drag an image here or <label for="file-input" style="color: #4285f4; cursor: pointer;">upload a file</label></div>
         <input type="file" id="file-input" class="upload-input">
@@ -162,7 +163,7 @@
     <button class="upload-button" id="upload-button">Generate Statistics</button>
 
     <!-- Loading Animation -->
-    <div id="loading-animation"><br><br><br>Generating statistics...</div>
+    <div id="loading-animation"><br><br><br>Generating statistics...<br><i>takes 5-10 seconds</i></div>
 
     <br>
     <br>
