Add autoscroll to bottom

--- a/upload/index.html
+++ b/upload/index.html
@@ -102,6 +102,7 @@
                         $('#loading-animation').hide(); // Hide the loading animation
                         // Render the HTML in the pre tag with id 'html-output'
                         $('#html-output').text(JSON.stringify(data)).show();
+                        window.scrollTo(0, document.body.scrollHeight);
                     },
                     error: function() {
                         $('#loading-animation').hide(); // Hide the loading animation
