Add pretty print json

--- a/upload/index.html
+++ b/upload/index.html
@@ -101,7 +101,7 @@
                     success: function(data) {
                         $('#loading-animation').hide(); // Hide the loading animation
                         // Render the HTML in the pre tag with id 'html-output'
-                        $('#html-output').text(JSON.stringify(data)).show();
+                        $('#html-output').text(JSON.stringify(data, null, 4)).show();
                         window.scrollTo(0, document.body.scrollHeight);
                     },
                     error: function() {
