--- a/upload/index.html
+++ b/upload/index.html
@@ -241,7 +241,7 @@
     <div id="Note"><b>Note: Upload the screenshot with the statistics in horizontal orientation or in an orientation such that none of the text has any rotation</b></div>
     <img id="image-preview" style="display:none;"/>
     <br>
-    <div id="Note2" style="display:none; margin-top: 1em"><i>The screenshots and analysed data will be manually assessed before being published. Any incorrect grade translations will be fixed in the manual process</i></div>
+    <div id="Note2" style="display:none; margin-top: 1em"><i>The screenshots and analysed data will be manually assessed before being published. Any incorrect grade translations will be fixed in the manual process (E.g. missing 5.0X).</i></div>
     <pre id="html-output" style="display:none;"></pre>
     <pre id="json-output" style="display:none;"></pre>
     <form onsubmit="send_data(); return false;">
